Select the cross-cloud.yml based on the env

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,7 +7,15 @@ before_script:
   - export CI_COMMIT_SHA_SHORT=$(echo ${CI_COMMIT_SHA} | cut -c -8)
   - >
     if [ -z "$CROSS_CLOUD_YML" ]; then
-      export CROSS_CLOUD_YML="https://raw.githubusercontent.com/CrossCloudCI/cncf-configuration/production/cross-cloud.yml"
+       if [ "BASE_URL" == "https://gitlab.cncf.ci" ]; then
+          export CROSS_CLOUD_YML="https://raw.githubusercontent.com/CrossCloudCI/cncf-configuration/production/cross-cloud.yml"
+       elif [ "BASE_URL" == "https://gitlab.staging.cncf.ci" ]; then
+          export CROSS_CLOUD_YML="https://raw.githubusercontent.com/CrossCloudCI/cncf-configuration/staging/cross-cloud.yml"
+       elif [ "BASE_URL" == "https://gitlab.cidev.cncf.ci" ]; then
+          export CROSS_CLOUD_YML="https://raw.githubusercontent.com/CrossCloudCI/cncf-configuration/integration/cross-cloud.yml"
+       else
+          export CROSS_CLOUD_YML="https://raw.githubusercontent.com/CrossCloudCI/cncf-configuration/master/cross-cloud.yml"
+       fi
     else
       export CROSS_CLOUD_YML="$CROSS_CLOUD_YML"
     fi
