--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -52,17 +52,13 @@ compile:
     - echo "Run npm tests"
     - pushd $(pwd)/admin/src/main/resources/io/buoyant/admin/ ;  npm run eslint ; npm test ; popd 
     - echo "Run unit and e2e tests"
-    # - sh -x ci/test.sh 
-    # - set -x ci/coverage-publish.sh || true
+    - sh -x ci/test.sh 
+    - set -x ci/coverage-publish.sh
     - echo "Publish"
     # - DOCKER_TARGET="dockerBuildAndPush"
-    - DOCKER_TARGET="docker"
-    # - ./sbt "set Base.dockerTag in (linkerd, Bundle) := \"${IMAGE_TAG}\"" "linkerd/bundle:${DOCKER_TARGET}" \
-            # "set Base.dockerTag in (namerd, Bundle) := \"${IMAGE_TAG}\"" "namerd/bundle:${DOCKER_TARGET}" \
-            # "set Base.dockerTag in (namerd, Dcos) := \"dcos-${IMAGE_TAG}\"" "namerd/dcos:${DOCKER_TARGET}"
-    - ./sbt 'set imageNames in docker in (linkerd, Bundle) += ImageName("registry.cncf.ci/linkerd/linkerd/linkerd:1.3.1")' \ "linkerd/docker"
-    - ./sbt 'set imageNames in docker in (namerd, Bundle) += ImageName("registry.cncf.ci/linkerd/linkerd/namerd:1.3.1")' \ "namerd/docker"
-    - ./sbt 'set imageNames in docker in (namerd, Dcos) += ImageName("registry.cncf.ci/linkerd/linkerd/namerd-dcos:1.3.1")' \ "namerd/dcos:docker"
+    - export NO_PUSH="1"
+    - ci/docker-publish.sh "$CI_COMMIT_SHA"
+    
 
   artifacts:
     name: "${CI_JOB_NAME}_${CI_COMMIT_REF_NAME}"
