--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,7 +58,6 @@ compile:
     # - DOCKER_TARGET="dockerBuildAndPush"
     - export NO_PUSH="1"
     - ci/docker-publish.sh "$CI_COMMIT_SHA.$CI_PIPELINE_ID"
-    - docker images | grep "$CI_COMMIT_SHA.$CI_PIPELINE_ID"
     
 
   artifacts:
@@ -72,13 +71,13 @@ container:
   image: crosscloudci/debian-docker
   script:
     - IMAGE_TAG=${CI_COMMIT_SHA_SHORT}
-    - docker tag registry.cncf.ci/linkerd/linkerd/linkerd:1.3.1 "$CI_REGISTRY_IMAGE"/linkerd:"$IMAGE_TAG"
-    - docker tag registry.cncf.ci/linkerd/linkerd/namerd:1.3.1 "$CI_REGISTRY_IMAGE"/namerd:"$IMAGE_TAG"
-    - docker tag registry.cncf.ci/linkerd/linkerd/namerd-dcos:1.3.1 "$CI_REGISTRY_IMAGE"/namerd-dcos:"$IMAGE_TAG"
+    - docker tag buoyantio/linkerd:"$CI_CIMMIT_SHA.$CI_PIPELINE_ID" "$CI_REGISTRY_IMAGE"/linkerd:"$IMAGE_TAG"
+    - docker tag buoyantio/namerd:"$CI_COMMIT_SHA.$CI_PIPELINE_ID" "$CI_REGISTRY_IMAGE"/namerd:"$IMAGE_TAG"
+    - docker tag buoyantio/namerd:dcos-"$CI_COMMIT_SHA.$CI_PIPELINE_ID" "$CI_REGISTRY_IMAGE"/namerd:dcos-"$IMAGE_TAG"
     - docker login -u "gitlab-ci-token" -p "$CI_JOB_TOKEN" $CI_REGISTRY
     - docker push "$CI_REGISTRY_IMAGE"/linkerd:"$IMAGE_TAG"
     - docker push "$CI_REGISTRY_IMAGE"/namerd:"$IMAGE_TAG"
-    - docker push "$CI_REGISTRY_IMAGE"/namerd-dcos:"$IMAGE_TAG"
+    - docker push "$CI_REGISTRY_IMAGE"/namerd:dcos-"$IMAGE_TAG"
     - touch release.env
     - echo export IMAGE_ARGS=\"--set image=$CI_REGISTRY_IMAGE/linkerd:$IMAGE_TAG\" | tee release.env
     - cat release.env
