--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ container:
   image: crosscloudci/debian-docker
   script:
     - IMAGE_TAG=${CI_COMMIT_SHA_SHORT}
-    - docker tag buoyantio/linkerd:"$CI_CIMMIT_SHA.$CI_PIPELINE_ID" "$CI_REGISTRY_IMAGE"/linkerd:"$IMAGE_TAG"
+    - docker tag buoyantio/linkerd:"$CI_COIMMIT_SHA.$CI_PIPELINE_ID" "$CI_REGISTRY_IMAGE"/linkerd:"$IMAGE_TAG"
     - docker tag buoyantio/namerd:"$CI_COMMIT_SHA.$CI_PIPELINE_ID" "$CI_REGISTRY_IMAGE"/namerd:"$IMAGE_TAG"
     - docker tag buoyantio/namerd:dcos-"$CI_COMMIT_SHA.$CI_PIPELINE_ID" "$CI_REGISTRY_IMAGE"/namerd:dcos-"$IMAGE_TAG"
     - docker login -u "gitlab-ci-token" -p "$CI_JOB_TOKEN" $CI_REGISTRY
