--- a/cncfci.yml
+++ b/cncfci.yml
@@ -3,3 +3,5 @@ project:
   display_name: Linkerd
   sub_title: Service Mesh
   project_url: "https://github.com/linkerd/linkerd"
+  stable_ref: "1.6.3"
+  head_ref: "master"
